Criado novo input

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title></title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	    <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
-	    <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
-	    <meta name="theme-color" content="#4C4CFF">
-	    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/> -->
-	    <link rel="stylesheet" href="css/normalize.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
+    <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
+    <meta name="theme-color" content="#4C4CFF">
+    <link rel="stylesheet" href="css/normalize.min.css">
+		<title>Cifra de César</title>
 	</head>
 	<body>
 		<div class="main">
