--- a/encript.html
+++ b/encript.html
@@ -1,24 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title></title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	    <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
-	    <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
-	    <meta name="theme-color" content="#4C4CFF">
-	    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/> -->
-	    <link rel="stylesheet" href="css/normalize.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
+    <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
+    <meta name="theme-color" content="#EEFF41">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
+    <link rel="stylesheet" href="css/reset.min.css">
+    <link rel="stylesheet" href="css/main.css">
+		<title>Cifra de César</title>
 	</head>
 	<body>
+    <header id="main-header">
+      <div class="wrap">
+        <h1 class="logo">Cesificator</h1>
+        <div class="input-container">
+          <span class="input-icon">
+            <i class="material-icons">menu</i>
+          </span>
+          <input type="text" class="input" placeholder="Digite uma palavra ou frase para criptografar">
+        </div>
+      </div>
+    </header>
+
 		<div class="main">
-			<nav>
-				<ul>
-					<li><a href="index.html" title="Página inicial">Início</a></li>
-					<li><a href="encript.html" title="Codificar uma mensagem">Encriptar</a></li>
-					<li><a href="decript.html" title="Decodificar uma mensagem secreta">Decriptar</a></li>
-				</ul>
-			</nav>
 			<section>
 				<article>
 					<header>
