Algumas mudanças realizadas

--- a/encript.html
+++ b/encript.html
@@ -21,8 +21,9 @@
           <span class="input-icon">
             <i class="material-icons">menu</i>
           </span>
-          <input type="text" class="input" placeholder="Digite uma palavra ou frase para criptografar">
+          <input type="text" id="word" class="input" placeholder="Digite uma palavra ou frase para criptografar">
         </div>
+        <p class="key-label">Chave criptográfica de 1 à 10:</p>
       </div>
     </header>
 
@@ -36,7 +37,7 @@
 					
 						<fieldset>
 							<legend>Digite aqui sua palavra ou frase:</legend>
-							<input type="text" id="word" name="frase">
+							<input type="text" name="frase">
 						</fieldset>
 						<fieldset>
 							<legend>Escolha um valor entre 1 e 10:</legend>
