Algumas pequenas mudanças

--- a/encript.html
+++ b/encript.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
     <meta name="theme-color" content="#EEFF41">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,9 +21,12 @@
           <span class="input-icon">
             <i class="material-icons">menu</i>
           </span>
-          <input type="text" id="word" class="input" placeholder="Digite uma palavra ou frase para criptografar">
+          <input type="text" class="input" placeholder="Digite uma palavra ou frase para criptografar">
         </div>
-        <p class="key-label">Chave criptográfica de 1 à 10:</p>
+        <div class="key-container">
+          <p class="key-label">Chave criptográfica de 1 à 26:</p>
+          <input type="number" class="key-input" value="0" min="1" max="26">
+        </div>
       </div>
     </header>
 
@@ -37,11 +40,7 @@
 					
 						<fieldset>
 							<legend>Digite aqui sua palavra ou frase:</legend>
-<<<<<<< HEAD
-							<input type="text" name="frase">
-=======
 							<input type="text" id="word" name="frase" autocomplete autofocus>
->>>>>>> dfeeea51d668ec47a251664505fd7272db804b34
 						</fieldset>
 						<fieldset>
 							<legend>Escolha um valor entre 1 e 26:</legend>
