Input number alterado para range. valor do range mudando em tempo real. Encriptação disparada pelo botão encriptar. Na página de testes, algumas alternativas para transformar a encriptação em automática junto no range e formas de desabilitar e reabilitar o range para impedir que este seja selecionado antes que uma frase ou palavra sejam digitados

--- a/teste.html
+++ b/teste.html
@@ -47,7 +47,7 @@
 					
 						<fieldset>
 							<legend>Digite aqui sua palavra ou frase:</legend>
-							<input type="text" id="word" onChange="desabilita();" name="frase" autocomplete autofocus>
+							<input type="text" id="word" onInput="desabilita();" name="frase" autocomplete autofocus>
 						</fieldset>
 						<fieldset>
 							<legend>Escolha um valor entre 1 e 26:</legend>
