--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
     <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
-    <meta name="theme-color" content="#4C4CFF">
-    <link rel="stylesheet" href="css/normalize.min.css">
-		<title>Cifra de César</title>
-	</head>
-	<body>
-		<div class="main">
-			<nav>
-				<ul>
-					<li><a href="index.html" title="Página inicial">Início</a></li>
-					<li><a href="encript.html" title="Codificar uma mensagem">Encriptar</a></li>
-					<li><a href="decript.html" title="Decodificar uma mensagem secreta">Decriptar</a></li>
-				</ul>
-			</nav>
-			<section>
-				<article>
-					<header>
-						<h2>Cifra de César</h2>
-						<legend>Como funciona a criptografia baseada no conceito da Cifra de César?</legend>
-					</header>
-					<p>
-						Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum 
+    <meta name="theme-color" content="#EEFF41">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
+    <link rel="stylesheet" href="css/reset.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Cifra de César</title>
+  </head>
+  <body>
 
-					</p>
-				</article>
-			</section>
-			<footer>Copyright 2015</footer>
-		</div>
-	</body>
+    <main class="main-menu">
+      <div class="wrap">
+        <h1 class="logo menu">Cesificator</h1>
+        <h3 class="subtitle">Criptografia baseada na Cifra de César.</h3>
+        
+        <!-- Navigation Menu -->
+        <nav id="main-nav">
+          <a class="nav-button" href="#">Como Funciona</a>
+          <a class="nav-button" href="#">Criptografar</a>
+          <a class="nav-button" href="#">Decriptografar</a>
+          <a class="nav-social-icon" href="#info" title="Sobre o projeto"><i class="fa fa-info-circle"></i></a>
+          <a class="nav-social-icon" href="#twitter" title="Twitte o projeto"><i class="fa fa-twitter-square"></i></a>
+        </nav>
+
+      </div>
+    </main>
+
+    <script src="js/main.js"></script>
+  </body>
 </html>
