Adicionado transição do menu para bloco de explicação

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <!-- Navigation Menu -->
         <nav id="main-nav">
-          <a class="nav-button" href="#">Como Funciona</a>
+          <a class="nav-button" id="howit" href="#">Como Funciona</a>
           <a class="nav-button" href="#">Criptografar</a>
           <a class="nav-button" href="#">Decriptografar</a>
           <a class="nav-social-icon" href="#info" title="Sobre o projeto"><i class="fa fa-info-circle"></i></a>
@@ -32,6 +32,12 @@
 
       </div>
     </main>
+    
+    <div class="hide" id="explanation">
+      <div class="wrap">
+        <h1>asjdh as dasld </h1>
+      </div>
+    </div>
 
     <script src="js/main.js"></script>
   </body>
