Adicionado função para copiar o resultado para o clipboard

--- a/encript.html
+++ b/encript.html
@@ -33,7 +33,8 @@
 
     <main>
       <div class="wrap">
-        <p id="cript" class="result"></p>
+        <textarea readonly id="cript" class="result js-copytextarea"></textarea>
+        <a class="fab copy js-textareacopybtn" href="#" title="Clique para copiar"><i class="material-icons">content_copy</i></a>
       </div>
     </main>
 
