--- a/index.html
+++ b/index.html
@@ -35,17 +35,28 @@
     
     <div class="hide" id="explanation">
       <div class="wrap cycle-slideshow" data-cycle-slides="article" data-cycle-timeout="0" data-cycle-next="#control-r">
-          <article class="exp-article">
+          
+          <article class="exp-article" id="first">
             <header>
               <h2>O que é</h2>
             </header>
             <p>Em criptografia, a Cifra de César, também conhecida como cifra de troca, código de César ou troca de César, é uma das mais simples e conhecidas técnicas de criptografia. É um tipo de cifra de substituição na qual cada letra do texto é substituída por outra, que se apresenta no alfabeto abaixo dela um número fixo de vezes. Por exemplo, com uma troca de três posições, A seria substituído por D, B se tornaria E, e assim por diante. O nome do método é em homenagem a Júlio César, que o usou para se comunicar com os seus generais.</p>
           </article>
-          <article class="exp-article">
+
+          <article class="exp-article" id="last">
             <header>
               <h2>Quem usa</h2>
             </header>
             <p>O processo de criptografia de uma cifra de César é frequentemente incorporado como parte de esquemas mais complexos, como a cifra de Vigenère, e continua tendo aplicações modernas, como no sistema ROT13. Como todas as cifras de substituição monoalfabéticas, a cifra de César é facilmente decifrada e na prática não oferece essencialmente nenhuma segurança na comunicação.</p>
+          </article>
+
+          <article class="exp-article">
+            <header>
+              <h2>Pronto!</h2>
+            </header>
+            <p>
+              Agora é hora de começar a criptografar.
+            </p>  
           </article>
         <a class="fab" id="control-r" href="#"><i class="material-icons">arrow_forward</i></a>
       </div>
