Mudança no <title>

--- a/decript.html
+++ b/decript.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Cifra de César</title>
+    <title>Cifra de César - Decriptação</title>
   </head>
   <body>
     <header id="main-header">
