--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Cifra de César</title>
+    <title>Cifra de César - Início</title>
   </head>
   <body>
 
