--- a/encript.html
+++ b/encript.html
@@ -26,7 +26,7 @@
         <div class="menu-container">
           <nav class="dropdown-menu" id="nav-menu">
             <ul>
-              <li><a href="decript.html">Decriptografar</a></li>
+              <li><a href="decript.html">Descriptografar</a></li>
               <li><a href="index.html">Menu Principal</a></li>
             </ul>
           </nav>
