--- a/decript.html
+++ b/decript.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
     <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
     <meta name="theme-color" content="#EEFF41">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
