--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Uma página que tem como o objetivo encriptar uma informação com base na cifra de César">
     <meta name="keywords" content="criptografia, encriptação, cifra de cesar, segurança da informação, TI">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon"/>
     <meta name="theme-color" content="#EEFF41">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
