Menu Principal atualizado

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <main class="main-menu">
       <div class="wrap">
-        <h1 class="logo menu">Cesificator</h1>
+        <h1 class="logo homescreen">Cesificator</h1>
         <h3 class="subtitle">Criptografia baseada na Cifra de César.</h3>
         
         <!-- Navigation Menu -->
