--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#EEFF41">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -36,7 +36,7 @@
       </p>
       <footer>
         <a class="material-button flat" href="#fechar">Fechar</a>
-        <a class="material-button flat" href="encript">Iniciar</a>
+        <a class="material-button flat" href="encript.html">Iniciar</a>
       </footer>
     </section>
     
