--- a/app/decript.html
+++ b/app/decript.html
@@ -29,7 +29,7 @@
       <div class="wrap">
         <h1 class="logo">Decesificator</h1>
         <div class="input-container">
-          <span class="input-icon" onclick="toggleMenu();">
+          <span class="input-icon" id="menu-button">
             <i class="material-icons">menu</i>
           </span>
           <input type="text" class="input" id="word" oninput="DECRIPT_STRING();" placeholder="Digite uma palavra ou frase para criptografar">
@@ -59,7 +59,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/clipboard/src/clipboard.js"></script>
+    <script src="bower_components/clipboard/dist/clipboard.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
