ClipboardJS integrado e algumas modificações

--- a/app/decript.html
+++ b/app/decript.html
@@ -37,7 +37,7 @@
         <div class="menu-container">
           <nav class="dropdown-menu" id="nav-menu">
             <ul>
-              <li><a href="decript.html">Descriptografar</a></li>
+              <li><a href="encript.html">Criptografar</a></li>
               <li><a href="index.html">Menu Principal</a></li>
             </ul>
           </nav>
