Alterações finais e remoção de arquivos obsoletos

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,9 @@
     
     <main class="main-menu">
       <div class="wrap">
+        <figure class="imagelogo">
+          <img src="images/branding/cifraCesar.png" alt="Logotipo do Cesificator">
+        </figure>
         <h1 class="logo homescreen">Cesificator</h1>
         <h3 class="subtitle">Criptografia baseada na Cifra de César</h3>
         
